Fixed parameter hiding when using endpoint links
Made AppendOptionsToPath more flexible
Fixed query and matrix parameter losing when using EndpointLink